@@ -41,14 +41,13 @@ Sun::Sun(Ogre::Camera* camera, Ogre::SceneManager* sceneMgr)
 	mSunNode = EmberOgre::getSingleton().getWorldSceneNode()->createChildSceneNode();
 	mSunNode->attachObject(mSun);
   
-	try {
+///disable for now
+/*	try {
 		Ogre::ParticleSystem* sunParticle = Ogre::ParticleSystemManager::getSingleton().createSystem("Sun", "Space/Sun"); 
 		mSunNode->attachObject(sunParticle);   
 	} catch (const Ogre::Exception& ex) {
 		S_LOG_FAILURE("Error when creating sun. Message: " << ex.getFullDescription());
-	}
-	//Ogre::Entity* entity = sceneMgr->createEntity("sunentity", "Alpha_Male.mesh");
-	//mSunNode->attachObject(entity);
+	}*/
 	
 	setSunPosition(Ogre::Vector3(-500,300,-350));
 	setSunColour(Ogre::ColourValue(1, 1, 0.7)); //yellow
