@@ -188,8 +188,8 @@ PVSMap=no
 
 
 
-Height=6
-Width=6
+Height=12
+Width=12
 MaxNumRenderables=2000
 MaxNumTiles=2000
 VisibleRenderables=100
@@ -199,8 +199,8 @@ MaxRenderLevel=5
 VertexProgramMorph=yes
 LODMorphStart=0.5
 MaxPixelError=10
-MaxAdjacentPages=1
-MaxPreloadedPages=1
+MaxAdjacentPages=2
+MaxPreloadedPages=2
 VertexNormals=yes
 
 NumTextureFormatSupported=18
